conformance/tests/grpcroute-request-mirror.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-request-mirror
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: grpc-infra-backend-v1
      port: 8080
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: grpc-infra-backend-v2
          namespace: gateway-conformance-infra
          port: 8080
